<resources>
    <string name="app_name">PizzaShop</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="nav_home">Home</string>
    <string name="category_admin">Category</string>
    <string name="product_admin">Product</string>
    <string name="order_admin">Order</string>
    <string name="sale_admin">Sale</string>
    <string name="user_admin">User</string>
    <string name="thong_ke_admin">Thống kê</string>
    <string name="account">Practice</string>
    <string name="my_profile">Individual exercises</string>
    <string name="change_pass">Practice with Peter</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">CLose navigation drawe</string>

    <string name="tabRate">Home</string>
    <string name="tabFavorite">Cart</string>
    <string name="tab_my_page">Search</string>
    <string name="tab_my_profile">Profile</string>
    <string name="text_content">3517 W.Gay St.Utica, Pennsylavina 57...</string>
    <string name="white_place">Deliver to</string>
    <string name="back_update_category_restaurant"><![CDATA[Back home category  ->>]]></string>
    <string name="back_update_category"><![CDATA[Back home category  ->>]]></string>
    <string name="str_notification">Are you trying to edit the shop\'s catalog ?</string>

</resources>